# serde_with_unexpectedly_does_not_fail_on_error

./: Cargo.toml  README.md
src/: lib.rs
